# agent-playground

./: LICENSE  README.md  pyproject.toml
examples/: basic.py
playground/: __init__.py  agents.py  results.py  run.py  scoring.py
